src/objects/Attendence__c.object
<CustomObject>
    <fields>
        <fullName>Campaign_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Event</label>
        <referenceTo>Campaign_Event__c</referenceTo>
        <relationshipName>Attendences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MP</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Attendences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Invited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did Not Attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Campaign Event Attendence</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Attendence ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Event Attendences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>